Quorum3/Library/Tests/TypeChecker/Pass/InstanceTypeDirectChild.quorum
class Main
    action Main
        A a
        boolean result
        if a is B
            result = true
        else
            result = false
        end
    end
end