Quorum3/Library/Tests/TypeChecker/Fail/InstanceTypeUnrelatedTypes.quorum
class Main
    action main
        A a
        boolean result
        if a is D 
            result = true
        end
        else 
            result = false
        end
    end
end